@startuml database

skinparam linetype ortho

left to right direction

entity customer {
  *id: number <<generated>>
  --
  *username: text <<unique>>
}

entity message {
  *id: number <<generated>>
  --
  *customer_id: number <<FK>>
  *chat_id: number <<FK>>
  *msg_content: text
}

entity customer_chat {
  *chat_id: number <<FK>>
  *customer_id: number <<FK>>
}

entity chat {
  *id: number <<generated>>
  --
  *chat_name: text
}

customer ||..o{ customer_chat
customer_chat }|..|| chat
message }o..|| customer
message }o..|| chat

@enduml